db_deploy.yaml
apiVersion: app/v1
kind: Deployment
metadata:
  labels:
    app: mysql_db-deploy
  name: mysql_db-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql_db-deploy
  template:
    metadata:
      labels:
        app: mysql_db-deploy
    spec:
      containers:
      - name: mysql_db-deploy
        image: image-registry.openshift-image-registry.svc:5000/labproj19/mysql:14.1
        imagePullPolicy: "IfNotPresent"
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /
          name: mysql_db
        resources: {}
    volumes:
    - name: mysql_db
      persistentVolumeClaim:
        claimName: mysql_db-pvc
status: {}
