mainPage_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mainpage-deploy
  name: mainpage-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mainpage-deploy
  template:
    metadata:
      labels:
        app: mainpage-deploy
    spec:
      containers:
      - image: default-route-openshift-image-registry.apps.ocp.lab.cloudpak.site/labproj19/mainpage:1.0
        name: mainpage-deploy
        ports:
        - containerPort: 8080
status: {}
