opt_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: opinions-deploy
  name: opinions-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opinions-deploy
  template:
    metadata:
      labels:
        app: opinions-deploy
    spec:
      containers:
      - image: default-route-openshift-image-registry.apps.ocp.lab.cloudpak.site/labproj19/ opinions:1.0
        name: opinions-deploy
        ports:
        - containerPort: 8080
        resources: {}
        volumeMounts:
        - name: config-map
          mountPath: /etc/myconfig/
      volumes:
      - name: config-map
        configMap:
          name: mysql-cm
status: {}
