db_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql_db_svc
  labels:
    app: mysql_db_deploy
spec:
  type: NodePort
  ports:
  - port: 3306
  selector:
   app: mysql_db_deploy
