mainPage_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mainpage-svc
  labels:
    app: mainpage-deploy
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: mainpage-deploy
  type: ClusterIP
