opt_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: options-svc
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: options-deploy
  type: ClusterIP
