mainPage_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: mainPage_deploy
  name: mainPage_rt
spec:
  host: "mtgService.apps.cp4apps.cloudpak.site"
  port:
    targetPort: 8080
  to:
    kind: Service
    name: mainPage_svc
    weight: 100
